--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
         <section>
             <h2>About Me</h2>
             <p>
-                Briefly introduce yourself, your background, and your experience as a Unity developer.
+                I am a passionate and dedicated Unity Developer, with a degree in Computer Science from Politecnico di Torino. I have developed a strong foundation in programming and software development, with a particular focus on game development in Unity3D. My experience includes working on challenging projects, such as 'Alaloth - Champions of The Four Kingdoms', an action RPG game, and 'Hell For One', a blend of action and strategy elements, where I used my proficient knowledge of C# and Unity extensively. 
+            </p>
+            <p>
+                With a strong grasp of Object-Oriented Programming and game design principles, I have been able to create immersive and engaging game experiences. I am known for my quick learning abilities and commitment to keeping up with the latest advancements in technology. My ultimate goal is to create games that players love and remember.
             </p>
         </section>
         
