--- a/index.html
+++ b/index.html
@@ -40,10 +40,13 @@
         <section>
             <h2>About Me</h2>
             <p>
-                I am a passionate and dedicated Unity Developer, with a degree in Computer Science from Politecnico di Torino. I have developed a strong foundation in programming and software development, with a particular focus on game development in Unity3D. My experience includes working on challenging projects, such as 'Alaloth - Champions of The Four Kingdoms', an action RPG game, and 'Hell For One', a blend of action and strategy elements, where I used my proficient knowledge of C# and Unity extensively. 
+                I am a dedicated Unity Developer with a breadth of skills spanning gameplay engineering, AI development, shader programming, and more. With a rich background in Computer Science from the University of Milan, I have used my skills to contribute to a variety of immersive games, including the RPG 'Alaloth: Champions of The Four Kingdoms' and 'Apocalypse Rangers', a post-apocalyptic online twin-stick shooter.
             </p>
             <p>
-                With a strong grasp of Object-Oriented Programming and game design principles, I have been able to create immersive and engaging game experiences. I am known for my quick learning abilities and commitment to keeping up with the latest advancements in technology. My ultimate goal is to create games that players love and remember.
+                My technical prowess extends beyond gameplay, with demonstrated proficiency in AR/VR application development, networking, and an array of development tools like Unity, C#, Git, Asana, Jira, Visual Studio, and JetBrains Rider. A committed learner, I am also actively enhancing my skills in C++ and Unreal Engine. Beyond my technical abilities, I bring a keen understanding of SOLID principles, design patterns, Agile development methodology, and a strong team spirit. 
+            </p>
+            <p>
+                When not developing games, I can be found exploring various game genres as an avid gamer, and playing guitar and bass guitar as an amateur musician, expressing my creativity beyond the digital realm.
             </p>
         </section>
         
