--- a/index.html
+++ b/index.html
@@ -10,17 +10,24 @@
             line-height: 1.6;
             margin: 0;
             padding: 0;
+            max-width: 960px;
+            margin: auto;
+            padding: 1rem;
         }
         header {
             background-color: #4CAF50;
             color: white;
             text-align: center;
             padding: 1rem;
+            margin-bottom: 2rem;
         }
         main {
             padding: 2rem;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
         }
-        h2 {
+        h2, h3 {
             margin-bottom: 0.5rem;
         }
         ul {
@@ -29,6 +36,25 @@
         }
         li {
             margin-bottom: 1rem;
+        }
+        a {
+            color: #4CAF50;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .github-link {
+            display: inline-block;
+            margin-top: 1rem;
+            padding: 0.5rem 1rem;
+            background-color: #333;
+            color: white;
+            border-radius: 4px;
+            text-decoration: none;
+        }
+        .github-link:hover {
+            background-color: #4CAF50;
         }
     </style>
 </head>
