--- a/index.html
+++ b/index.html
@@ -56,6 +56,21 @@
         .github-link:hover {
             background-color: #4CAF50;
         }
+        /* Responsive video */
+        .video-container {
+            position: relative;
+            padding-bottom: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+            height: 0;
+            overflow: hidden;
+        }
+        
+        .video-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
     </style>
 </head>
 <body>
@@ -82,7 +97,9 @@
             <h3><a href="https://store.steampowered.com/app/919360/Alaloth_Champions_of_The_Four_Kingdoms/">Alaloth, Champions of the four kingdoms</a></h3>
             <p><strong>Date:</strong> March 2021 - Current</p>
             <p>As a game programmer for "Alaloth, Champions of the four kingdoms," I've been contributing to a skill-driven ARPG game that draws inspiration from classics like Baldur’s Gate and Pillars of Eternity. Built with Unity and coded in C#, the game blends quick action with a compelling story.</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/pDqDUOuabC4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/pDqDUOuabC4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
             
             <h3><a href="https://www.youtube.com/watch?v=NWYD53nWk_c&t=1s&ab_channel=MatteoMoriani">Apocalypse Rangers</a></h3>
             <p><strong>Date:</strong> 2020-2021</p>
