Added Contacts Section

--- a/index.html
+++ b/index.html
@@ -149,7 +149,37 @@
         <section>
             <h2>Contact</h2>
             <p>
-                Provide contact information, such as your email address, LinkedIn profile, or Twitter handle.
+                I'd love to hear from you! Here's how you can reach me:
+            </p>
+            <p>
+                <button type="button" class="btn">
+                    <i class="fas fa-envelope"></i>
+                    <a href="mailto:alessandro.puddu94@gmail.com">Email me</a>
+                </button>
+            </p>
+            <p>
+                <button type="button" class="btn">
+                    <i class="fas fa-phone-alt"></i>
+                    Call me: +39 3913270803
+                </button>
+            </p>
+            <p>
+                <button type="button" class="btn">
+                    <i class="fab fa-linkedin"></i>
+                    <a href="https://www.linkedin.com/in/alessandro-puddu-65118a152/">Connect on LinkedIn</a>
+                </button>
+            </p>
+            <p>
+                <button type="button" class="btn">
+                    <i class="fab fa-github"></i>
+                    <a href="https://github.com/AlessandroPuddu">Check out my GitHub</a>
+                </button>
+            </p>
+            <p>
+                <button type="button" class="btn">
+                    <i class="fas fa-file-alt"></i>
+                    <a href="link-to-your-cv.pdf">View my CV</a>
+                </button>
             </p>
         </section>
     </main>
