Added Hell for One gameplay trailer

--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
             <p><strong>Date:</strong> 2019-2020</p>
             <p>Hell for One is a unique game, combining elements of 3D RTS and action. As part of the development team, I implemented core gameplay systems and AI, contributing to its win at the New Game Designer 2020 in the Offline Games Category.</p>
             <a class="github-link" href="https://github.com/Matteo-Moriani/HellForOne">View on GitHub</a>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/CdTGbZ79N0o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
             
             <h3>RuNeglect</h3>
             <p><strong>Date:</strong> 2018-2019</p>
