--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <p>At the Global Game Jam 2020 at Politecnico di Milano, I was part of a team that created an immersive VR game, "The Ordinary Day of a Repair Guy," for Oculus Quest. I primarily worked on implementing VR elements and interactions to offer a seamless gameplay experience.</p>
             <a class="github-link" href="https://github.com/AlessandroPuddu/GGJ2020">View on GitHub</a>
             <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/shorts/4GKqkPqLld4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/4GKqkPqLld4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             
             <h3><a href="https://lilprince18.itch.io/hell-for-one">Hell for one</a></h3>
