Fixed github buttons layout

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             
             <h3>Apocalypse Rangers</h3>
             <button type="button" class="btn">
-                <a class="github-link" href="https://github.com/Matteo-Moriani/VoxcanoGames">View on GitHub</a>
+                <a href="https://github.com/Matteo-Moriani/VoxcanoGames">View on GitHub</a>
                 <i class="fab fa-github"></i>
             </button>
             <p><strong>Date:</strong> 2020-2021</p>
@@ -141,11 +141,14 @@
                 <a href="https://globalgamejam.org/2020/games/mannequins-2">View on Global Game Jam</a>
             </button>
             <button type="button" class="btn">
-                <a class="github-link" href="https://github.com/AlessandroPuddu/GGJ2020">View on GitHub</a>
+                <a href="https://github.com/AlessandroPuddu/GGJ2020">View on GitHub</a>
                 <i class="fab fa-github"></i>
             </button>
             <p><strong>Date:</strong> Global Game Jam 2020</p>
             <p>At the Global Game Jam 2020 at Politecnico di Milano, I was part of a team that created an immersive VR game, "The Ordinary Day of a Repair Guy," for Oculus Quest. I primarily worked on implementing VR elements and interactions to offer a seamless gameplay experience.</p>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/4GKqkPqLld4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
             
             <h3>Hell for one</h3>
             <button type="button" class="btn">
@@ -153,7 +156,7 @@
                 <a href="https://lilprince18.itch.io/hell-for-one">View on Itch.io</a>
             </button>
             <button type="button" class="btn">
-                <a class="github-link" href="https://github.com/Matteo-Moriani/HellForOne">View on GitHub</a>
+                <a href="https://github.com/Matteo-Moriani/HellForOne">View on GitHub</a>
                 <i class="fab fa-github"></i>
             </button>
             <p><strong>Date:</strong> 2019-2020</p>
