--- a/index.html
+++ b/index.html
@@ -8,28 +8,32 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            line-height: 1.6;
+            line-height: 1.8;
             margin: 0;
             padding: 0;
             max-width: 960px;
             margin: auto;
             padding: 1rem;
+            background-color: #F3F3F3;
         }
         header {
-            background-color: #4CAF50;
+            background-color: #2C3E50;
             color: white;
             text-align: center;
             padding: 1rem;
             margin-bottom: 2rem;
+            border-radius: 8px;
         }
         main {
             padding: 2rem;
             background-color: white;
             border-radius: 8px;
             box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
+            margin-bottom: 2rem;
         }
         h2, h3 {
             margin-bottom: 0.5rem;
+            margin-top: 1rem;
         }
         ul {
             list-style-type: none;
@@ -39,23 +43,11 @@
             margin-bottom: 1rem;
         }
         a {
-            color: #4CAF50;
+            color: #2C3E50;
             text-decoration: none;
         }
         a:hover {
             text-decoration: underline;
-        }
-        .github-link {
-            display: inline-block;
-            margin-top: 1rem;
-            padding: 0.5rem 1rem;
-            background-color: #333;
-            color: white;
-            border-radius: 4px;
-            text-decoration: none;
-        }
-        .github-link:hover {
-            background-color: #4CAF50;
         }
         /* Responsive video */
         .video-container {
@@ -76,19 +68,26 @@
             display: inline-block;
             padding: 10px 20px;
             color: white;
-            background-color: #007bff;
+            background-color: #2980B9;
             border: none;
             border-radius: 5px;
             text-decoration: none;
             transition: background-color 0.3s ease;
+            margin-bottom: 1rem;
         }
         
         .btn:hover {
-            background-color: #0056b3;
+            background-color: #3498DB;
         }
         
         .btn i {
             margin-right: 5px;
+        }
+        .btn a {
+            color: white;
+        }
+        .btn a:hover {
+            text-decoration: none;
         }
     </style>
 </head>
