--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <p>
                 <button type="button" class="btn">
                     <i class="fas fa-file-alt"></i>
-                    <a href="link-to-your-cv.pdf">View my CV</a>
+                    <a href="https://drive.google.com/file/d/1cFx7aPTWL08Qx7CWcOtOZVBPL2Dmj1gE/view?usp=sharing">View my CV</a>
                 </button>
             </p>
         </section>
